* refactored process inputstreamreader * added maven opt to prefs to set environement variable in systems with low default settings (hello mac..) issue 119 * added genny generator bundle to codegen feature